@@ -476,6 +476,8 @@ public class CoffeeLevels extends StdLibrary implements ExpLevelLibrary
 		mob.delExpertise(null); // clears the cache
 		CMLib.achievements().possiblyBumpAchievement(mob, AchievementLibrary.Event.LEVELSGAINED, -1, mob);
 		CMLib.achievements().possiblyBumpAchievement(mob, AchievementLibrary.Event.CLASSLEVELSGAINED, -1, mob);
+		CMLib.achievements().possiblyBumpAchievement(mob, AchievementLibrary.Event.LEVELDOWN, 1, mob);
+		CMLib.achievements().possiblyBumpAchievement(mob, AchievementLibrary.Event.CLASSLEVELDOWN, 1, mob);
 		if(mob.isPlayer()
 		&&(!CMLib.flags().isInTheGame(mob, true)))
 			CMLib.database().DBUpdatePlayerMOBOnly(mob);
@@ -1307,6 +1309,8 @@ public class CoffeeLevels extends StdLibrary implements ExpLevelLibrary
 		}
 
 		CMLib.achievements().possiblyBumpAchievement(mob, AchievementLibrary.Event.LEVELSGAINED, 1, mob);
+		CMLib.achievements().possiblyBumpAchievement(mob, AchievementLibrary.Event.LEVELUP, 1, mob);
+		CMLib.achievements().possiblyBumpAchievement(mob, AchievementLibrary.Event.CLASSLEVELUP, 1, mob);
 		CMLib.achievements().possiblyBumpAchievement(mob, AchievementLibrary.Event.CLASSLEVELSGAINED, 1, mob);
 		if(mob.isPlayer()
 		&&(!CMLib.flags().isInTheGame(mob, true)))
