@@ -177,12 +177,28 @@
 #     achievement is also gained.
 #
 # ... EVENT="LEVELSGAINED" NUM=[NUM]
-#     [NUM] is the number of levels gained to complete this achievement, which is 
+#     [NUM] is the number of net levels gained to complete this achievement, which is 
 #     subtracted from when a level is lost, making this a NET levels gained.
 #
+# ... EVENT="LEVELUP" NUM=[NUM]
+#     [NUM] is the number of levels gained to complete this achievement.
+#
 # ... EVENT="CLASSLEVELSGAINED" NUM=[NUM] CLASS="[CHARCLASSID]" 
-#     [NUM] is the number of levels gained to complete this achievement, which is 
+#     [NUM] is the number of net levels gained to complete this achievement, which is 
 #     subtracted from when a level is lost, making this a NET class levels gained.
+#     Tracking will make this number seem 1 higher so that level 0 can be credited.
+#     [CHARCLASSID] The name or ID of the character class to count levels in.
+#
+# ... EVENT="CLASSLEVELUP" NUM=[NUM] CLASS="[CHARCLASSID]" 
+#     [NUM] is the number of levels gained to complete this achievement.
+#     Tracking will make this number seem 1 higher so that level 0 can be credited.
+#     [CHARCLASSID] The name or ID of the character class to count levels in.
+#
+# ... EVENT="LEVELDOWN" NUM=[NUM]
+#     [NUM] is the number of levels gained to complete this achievement.
+#
+# ... EVENT="CLASSLEVELDOWN" NUM=[NUM] CLASS="[CHARCLASSID]" 
+#     [NUM] is the number of levels gained to complete this achievement.
 #     Tracking will make this number seem 1 higher so that level 0 can be credited.
 #     [CHARCLASSID] The name or ID of the character class to count levels in.
 #
